Modifying index.html and add exercise 5 and 6

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </body>
 <!-- <script src="Exercise_1.js"></script> -->
 <!-- <script src="Exercise_2.js"></script> -->
-<script src="Exercise_3.js"></script>
-<script src="Exercise_4.js"></script>
+<!-- <script src="Exercise_3.js"></script> -->
+<!-- <script src="Exercise_4.js"></script> -->
 <script src="Exercise_5.js"></script>
-<script src="Exercise_6.js"></script>
+<!-- <script src="Exercise_6.js"></script> -->
 </html>
